# collective.person

./: CHANGELOG.md  CHANGES.md  MANIFEST.in  Makefile  README.md  instance.yaml  mx.ini  pyproject.toml  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: config.yml  main.yml
collective/person/: __init__.py  configure.zcml  indexers.py  interfaces.py  person.py  personportlet.pt  personportlet.py  personreferenceportlet.py
collective/person/browser/: configure.zcml  person_view.pt
collective/person/locales/: collective.person.pot  collective.person_manual.pot  plone.pot
collective/person/locales/da/LC_MESSAGES/: collective.person.po  plone.po
collective/person/profiles/default/: browserlayer.xml  portlets.xml  propertiestool.xml  types.xml
collective/person/profiles/default/types/: Person.xml
collective/person/schema/: person.xml
collective/person/tests/: base.py  test_portlet.py
docs/: LICENSE.txt
news/: +.internal  +behavior.breaking  +example.documentation  +gha.internal  +pkg_resources.internal  +python-add.internal  +python-drop.internal  11.bugfix  13.feature  16.bugfix  18.feature  20.feature  3.internal  5.feature  6.internal  7.bugfix  9.feature  person.feature  pt_BR.feature  update.feature  user-behavior.feature
scripts/: create_site.py
src/collective/person/: __init__.py  configure.zcml  dependencies.zcml  interfaces.py  permissions.zcml  profiles.zcml  testing.py  title_utilities.py  utils.py
src/collective/person/behaviors/: configure.zcml  person.py  user.py
src/collective/person/content/: person.py
src/collective/person/controlpanel/: configure.zcml  controlpanel.py  interfaces.py
src/collective/person/indexers/: configure.zcml  person.py  username.py
src/collective/person/locales/: collective.person.pot
src/collective/person/locales/de/LC_MESSAGES/: collective.person.po
src/collective/person/locales/es/LC_MESSAGES/: collective.person.po
src/collective/person/locales/fi/LC_MESSAGES/: collective.person.po
src/collective/person/locales/fr/LC_MESSAGES/: collective.person.po
src/collective/person/locales/pt_BR/LC_MESSAGES/: collective.person.po
src/collective/person/profiles/catalog/: catalog.xml
src/collective/person/profiles/default/: browserlayer.xml  catalog.xml  controlpanel.xml  diff_tool.xml  metadata.xml  repositorytool.xml  rolemap.xml  types.xml
src/collective/person/profiles/default/registry/: collective.person.controlpanel.interfaces.IPersonSettings.xml  plone.app.querystring.interfaces.IQueryField.xml
src/collective/person/profiles/default/types/: Person.xml
src/collective/person/profiles/testing/registry/: plone.i18n.interfaces.ILanguageSchema.xml
src/collective/person/profiles/uninstall/: browserlayer.xml
src/collective/person/setuphandlers/: catalog.py  demo.py
src/collective/person/setuphandlers/examplecontent/content/: __metadata__.json
src/collective/person/setuphandlers/examplecontent/content/170fe7dc3eb24ec5b2a98425c8e54936/: data.json
src/collective/person/setuphandlers/examplecontent/content/2331a4139374498e8987ab641eac6013/: data.json
src/collective/person/setuphandlers/examplecontent/content/2ceb71a0896e4a14817d5ffffc7c33ae/: data.json
src/collective/person/setuphandlers/examplecontent/content/babc6f40d9ba4190945c1dc6fc59a325/: data.json
src/collective/person/setuphandlers/examplecontent/content/e12363b8caea4515bfe7133d5a815c89/: data.json
src/collective/person/setuphandlers/examplecontent/content/plone_site_root/: data.json
src/collective/person/upgrades/: configure.zcml
src/collective/person/upgrades/v1010/: __init__.py  configure.zcml
src/collective/person/vocabularies/: configure.zcml  roles.py  title.py
tests/: conftest.py  test_title_utilities.py
tests/behaviors/: conftest.py  test_behavior_person.py  test_behavior_user.py
tests/content/: conftest.py  test_person.py
tests/indexing/: conftest.py  test_catalog_metadata.py
tests/restapi/: conftest.py  test_restapi_vocab_roles.py
tests/setup/: test_setup_install.py  test_setup_uninstall.py
tests/vocabularies/: test_vocab_roles.py  test_vocab_title.py
